tests/baselines/reference/AnnotationDeclarationNegative1.errors.txt
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative1.ets(1,18): error TS1005: '}' expected.


==== tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative1.ets (1 errors) ====
    @interface Anno {
                     
!!! error TS1005: '}' expected.